# Network-Traffic-Analyzer

./: .gitignore  CMakeLists.txt  Network_Traffic_Analyzer  README.md  ROADMAP.MD  docker-compose.yml  requirements.txt  traffic_log.txt
include/: analyzer.h  capture.h  output.h  publisher.h
src/: main.c
src/analysis/: analyzer.c
src/capture/: capture.c
src/ingestor/: data_ingestor.py  ingestor.c
src/output/: output.c  publisher.c
